--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>at.gridgears</groupId>
     <artifactId>codechecks</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
 
 	<description>Configuration for codechecks (PMD, FindBugs, etc.)</description>
     <url>https://github.com/GridGears/codechecks</url>
