--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,9 @@
 
     <groupId>at.gridgears</groupId>
     <artifactId>codechecks</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.1-SNAPSHOT</version>
 
+	<name>gridgears-codechecks</name>
 	<description>Configuration for codechecks (PMD, FindBugs, etc.)</description>
     <url>https://github.com/GridGears/codechecks</url>
 	 <licenses>
